# JARVIS

./: .gitignore  README.md  aktuellerstand.md  pluginsystem.md  problems.md  roadmap-agent-evolution.md  roadmap.md  sat-esp.md  sat-pi.md  umbau.txt  umbau_v3.md
deploy/client/: .client_id  README.md  build-sidecar.ps1  build-sidecar.sh  jarvis-client.py  policy.json  requirements.txt
deploy/data/: docker-compose.yml
deploy/desktop/: README.md
deploy/desktop/src-tauri/: Cargo.toml  tauri.conf.json
deploy/desktop/src-tauri/capabilities/: default.json
deploy/desktop/src-tauri/icons/: icon.icns
deploy/desktop/src-tauri/src/: main.rs
deploy/gpu/: .env.example  README.md  docker-compose.gpu.yml
deploy/plugin-example/: README.md  jarvis-client.js  plugin.json
deploy/sandbox/: Dockerfile  README.md  docker-compose.yml  requirements.txt  sandbox_server.py
deploy/satellite-esp/: CMakeLists.txt  README.md  partitions.csv  (+1 more)
deploy/satellite-esp/main/: CMakeLists.txt  audio_codec.c  hardware.h  idf_component.yml  jarvis_config.h  jarvis_satellite.c  leds.c  wakeword.c  wifi_prov.c
orchestrator/: CHANGES-2026-06-24.md  README.md  api_v1.py  app.py  auth.py  automations.py  biometrics.py  calendars.py  config.py  context_budget.py  debug.py  gen_cert.sh  jarvis-orchestrator.service  knowledge.py  mcp_hub.py  messaging.py  obsidian.py  plugin_bus.py  plugins_registry.py  profile.py  requirements.txt  run.sh  sandbox.py  services.py  session_hub.py  skills.py  store.py  subagent.py  timers.py  todos.py  tools.py  watchers.py
vorlage/: main.py  ui.py
(+35 files in other folders)
