[package]
name = "sh-jarvis"
version = "0.1.0"
edition = "2021"
description = "SH-Jarvis Desktop-Client (Tray + Sidecar-Supervisor)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
strip = true
lto = true
